fixed scrollbar issue

--- a/nav-app/src/app/tabs/tabs.component.scss
+++ b/nav-app/src/app/tabs/tabs.component.scss
@@ -28,6 +28,7 @@
 
 .scroll {
   overflow: auto;
+  width: 95.5vw;
 }
 
 .tabs {
